# twain

./: .gitignore  LICENSE  README.md  compose.yaml  railway.toml
.github/workflows/: ci.yml
apps/doctor/: README.md  pubspec.yaml
apps/doctor/android/app/: build.gradle.kts
apps/doctor/ios/Runner/: Info.plist
apps/doctor/ios/Runner.xcodeproj/: project.pbxproj
apps/doctor/lib/: main.dart
apps/doctor/lib/core/: router.dart
apps/doctor/lib/features/consult/: doctor_consult_screen.dart  doctor_history_screen.dart  rx_editor_sheet.dart
apps/doctor/lib/features/home/: doctor_home_screen.dart
apps/doctor/lib/features/profile/: doctor_profile_screen.dart
apps/doctor/web/: index.html  manifest.json
apps/patient/: README.md  pubspec.yaml
apps/patient/android/app/: build.gradle.kts
apps/patient/ios/Runner/: Info.plist
apps/patient/ios/Runner.xcodeproj/: project.pbxproj
apps/patient/lib/: main.dart
apps/patient/lib/core/: router.dart
apps/patient/lib/features/consult/: consultation_history_screen.dart  patient_consult_screen.dart
apps/patient/lib/features/home/: patient_home_screen.dart
apps/patient/web/: index.html  manifest.json
backend/: .env.example  Containerfile  Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_auth.py  003_consult.py
backend/app/: auth.py  claude_client.py  config.py  db.py  main.py  models.py  pdf.py  prompts.py  qubrid_client.py
backend/app/routers/: auth.py  doctor.py  patient.py  prescriptions.py  profile.py
backend/templates/: prescription.html
(+7 files in other folders)
